apps/oxlint/src/lsp/snapshots/fixtures_lsp_invalid_syntax@debugger.ts_invalid.vue.snap
---
source: apps/oxlint/src/lsp/tester.rs
---
########## 
Linted file: fixtures/lsp/invalid_syntax/debugger.ts
----------
########## Diagnostic Reports
File URI: file://<variable>/fixtures/lsp/invalid_syntax/debugger.ts

code: ""
code_description.href: "None"
message: String("Unexpected token")
range: Range { start: Position { line: 0, character: 9 }, end: Position { line: 0, character: 10 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/lsp/invalid_syntax/debugger.ts"
related_information[0].location.range: Range { start: Position { line: 0, character: 9 }, end: Position { line: 0, character: 10 } }
severity: Some(Error)
source: Some("oxc")
tags: None

########### Code Actions/Commands

########### Fix All Action
None
########## 
Linted file: fixtures/lsp/invalid_syntax/invalid.vue
----------
########## Diagnostic Reports
File URI: file://<variable>/fixtures/lsp/invalid_syntax/invalid.vue

code: ""
code_description.href: "None"
message: String("Missing initializer in const declaration\nhelp: Add an initializer (e.g. ` = undefined`) here")
range: Range { start: Position { line: 2, character: 6 }, end: Position { line: 2, character: 13 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/lsp/invalid_syntax/invalid.vue"
related_information[0].location.range: Range { start: Position { line: 2, character: 6 }, end: Position { line: 2, character: 13 } }
severity: Some(Error)
source: Some("oxc")
tags: None

########### Code Actions/Commands

########### Fix All Action
None
