apps/oxlint/src/lsp/snapshots/fixtures_lsp_issue_14565@foo-bar.astro.snap
---
source: apps/oxlint/src/lsp/tester.rs
---
########## 
Linted file: fixtures/lsp/issue_14565/foo-bar.astro
----------
########## Diagnostic Reports
File URI: file://<variable>/fixtures/lsp/issue_14565/foo-bar.astro

code: "unicorn(filename-case)"
code_description.href: "https://oxc.rs/docs/guide/usage/linter/rules/unicorn/filename-case.html"
message: String("Filename should be in snake_case, or PascalCase\nhelp: Rename the file to 'foo_bar.astro', or 'FooBar.astro'")
range: Range { start: Position { line: 0, character: 3 }, end: Position { line: 0, character: 3 } }
related_information[0].message: ""
related_information[0].location.uri: "file://<variable>/fixtures/lsp/issue_14565/foo-bar.astro"
related_information[0].location.range: Range { start: Position { line: 0, character: 3 }, end: Position { line: 0, character: 3 } }
severity: Some(Error)
source: Some("oxc")
tags: None

########### Code Actions/Commands

########### Fix All Action
None
